--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
                     <div class="card bg-dark text-white rounded-0 border-0">
-                        <img class="card-img rounded-0" src="img/carousel1.jpg" alt="Title" />
+                        <img class="img-fluid card-img rounded-0" src="img/carousel1.jpg" alt="Title" />
                         <div class="card-img-overlay  ms-5">
                             <div class="row h-100 justify-content-center align-items-lg-center g-0">
 
@@ -129,7 +129,7 @@
                 <div class="carousel-item">
                     <div class="card bg-dark text-white rounded-0 border-0">
                         <div class="card bg-dark text-white">
-                            <img class="card-img rounded-0" src="img/carousel2.jpg" alt="Title" />
+                            <img class="img-fluid card-img rounded-0" src="img/carousel2.jpg" alt="Title" />
                             <div class="card-img-overlay ms-5">
                                 <div class="row h-100 justify-content-center align-items-lg-center g-0">
 
@@ -153,7 +153,7 @@
                 <div class="carousel-item">
                     <div class="card bg-dark text-white rounded-0 border-0">
                         <div class="card bg-dark text-white border-0 rounded-0">
-                            <img class="card-img rounded-0" src="img/carousel3.jpg" alt="Title" />
+                            <img class="img-fluid card-img rounded-0" src="img/carousel3.jpg" alt="Title" />
                             <div class="card-img-overlay ms-5">
                                 <div class="row align-content-center h-100 g-0">
                                     <div class="col">
@@ -311,9 +311,8 @@
                                 <h5 class="text-light card-text">Desbloquea tu Ghoul
                                     interior... en Fallout 76
                                 </h5>
-                                <p class="text-light">Únete a la caza, explora un mundo con
-                                    vida propia y lucha contra feroces
-                                    monstruos</p>
+                                <p class="text-light">Conviértete en un Ghoul y disfruta de 
+                                    Appalachia como nunca antes</p>
                                 <h6 class="text-light">CONSIGUELO HOY</h6>
 
                             </div>
