--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <div class="row m-0 align-content-stretch h-100">
             <div class="col-md-6 p-0">
                 <div class="card h-100 bg-dark text-white  border-0 rounded-0  w-100">
-                    <img class="card-img rounded-0 h-100" src="img/gameg1.jpg" alt="Title" />
+                    <img class="img-fluid card-img rounded-0 h-100" src="img/gameg1.jpg" alt="Title" />
                     <div class="card-img-overlay">
                         <div class="row align-items-end h-100 m-0">
                             <div class="col p-0">
@@ -351,7 +351,7 @@
     </main>
     <footer>
         <section class="bg-white p-5">
-            <div class="row align-items-center justify-content-center m-0">
+            <div class="row align-items-center justify-content-center m-0 flex-nowrap">
                 <div class="col-auto">
                     SIgue a Xbox
                 </div>
