--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         <div class="row m-0 h-100">
 
             <div class="col-md-6 p-0">
-                <div class="card bg-success h-50 rounded-0 border-0 text-light" style="width: 100%;">
+                <div class="card bg-success h-50 rounded-0 border-0 text-light w-100" >
                     <div class="row m-0 h-100">
 
                         <div class="col-6 p-0 align-content-center">
@@ -299,10 +299,10 @@
                     
 
                 </div>
-                <div class="card h-50 w-100  bg-success rounded-0 border-0 text-light" style="width: 100%;">
+                <div class="card h-50 w-100  bg-success rounded-0 border-0 text-light w-100">
                     <div class="row m-0">
                         <div class="col-6 p-0">
-                            <img src="img/game4.jpg" class="img-fluid rounded-0 h-100" alt="Card title" />
+                            <img src="img/game4.jpg" class="img-fluid rounded-0  h-100" alt="Card title" />
                         </div>
 
                         <div class="col-6 align-content-center">
@@ -356,25 +356,25 @@
                     SIgue a Xbox
                 </div>
                 <div class="col-auto ">                        
-                    <img src="img/ico_mail.svg" alt="" width="20"> 
+                    <img src="img/ico_mail.svg" alt="" width="15"> 
                 </div>
                 <div class="col-auto">
                     <img
-                        src="img/ico_facebook.svg" alt="" width="20" >
+                        src="img/ico_facebook.svg" alt="" width="15" >
                 </div>
                 <div class="col-auto">
                     <img src="img/ico_x.svg" alt=""
-                        width="20" >
+                        width="15" >
                 </div>
                 <div class="col-auto">
-                    <img src="img/ico_instagram.svg" alt="" width="20"  > 
+                    <img src="img/ico_instagram.svg" alt="" width="15"  > 
                 </div>
                 <div class="col-auto">
                     <img src="img/ico_whatsapp.svg"
-                        alt="" width="20" >
+                        alt="" width="15" >
                 </div>
                 <div class="col-auto">
-                    <img src="img/ico_tiktoc.svg" alt="" width="20" > 
+                    <img src="img/ico_tiktoc.svg" alt="" width="15" > 
                 </div>
                 <div class="col-auto">
                     <img src="img/ico_youtube.svg" alt=""
