--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                                 </h5>
                                 <p class="text-light">Conviértete en un Ghoul y disfruta de 
                                     Appalachia como nunca antes</p>
-                                <h6 class="text-light">CONSIGUELO HOY</h6>
+                                <h6 class="text-light text-nowrap">CONSIGUELO HOY</h6>
 
                             </div>
                         </div>
@@ -351,12 +351,12 @@
     </main>
     <footer>
         <section class="bg-white p-5">
-            <div class="row align-items-center justify-content-center m-0 flex-nowrap">
+            <div class="row align-items-center justify-content-center m-0 ">
                 <div class="col-auto">
                     SIgue a Xbox
                 </div>
                 <div class="col-auto ">                        
-                    <img src="img/ico_mail.svg" alt="" width="15"> 
+                    <img src="img/ico_mail.svg" alt="" width="20"> 
                 </div>
                 <div class="col-auto">
                     <img
@@ -364,17 +364,17 @@
                 </div>
                 <div class="col-auto">
                     <img src="img/ico_x.svg" alt=""
-                        width="15" >
+                        width="20" >
                 </div>
                 <div class="col-auto">
-                    <img src="img/ico_instagram.svg" alt="" width="15"  > 
+                    <img src="img/ico_instagram.svg" alt="" width="20"  > 
                 </div>
                 <div class="col-auto">
                     <img src="img/ico_whatsapp.svg"
-                        alt="" width="15" >
+                        alt="" width="20" >
                 </div>
                 <div class="col-auto">
-                    <img src="img/ico_tiktoc.svg" alt="" width="15" > 
+                    <img src="img/ico_tiktoc.svg" alt="" width="20" > 
                 </div>
                 <div class="col-auto">
                     <img src="img/ico_youtube.svg" alt=""
