--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <div class="card-img-overlay  ms-5">
                             <div class="row h-100 justify-content-center align-items-lg-center g-0">
 
-                                <div class="col ">
+                                <div class="col-12   ">
                                     <p><button class="btn btn-warning ">NUEVA TEMPORADA</button></p>
                                     <h4 class="text-light">Call of Duty: Black ops 6 - <br>
                                         Temporada 02
@@ -133,7 +133,7 @@
                             <div class="card-img-overlay ms-5">
                                 <div class="row h-100 justify-content-center align-items-lg-center g-0">
 
-                                    <div class="col ">
+                                    <div class="col-12 ">
                                         <p><button class="btn btn-warning ">YA DISPONIBLES</button></p>
                                         <h4 class="text-light">Assassin's Creed Shadows
                                         </h4>
